# evidence-k

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: benchmark.yml  ci.yml  pages.yml
configs/: dual_mock.yaml  example.yaml  openrouter.yaml  openrouter_domains.yaml  openrouter_domains_pinned.yaml  openrouter_dual.yaml  openrouter_dual_battery.yaml  openrouter_dual_battery_gpt55pro.yaml  openrouter_hard.yaml
data/domains/: finance.jsonl  legal.jsonl  medical.jsonl  technical.jsonl
data/dual/: dual_instrumented.jsonl
data/dual_battery/: conflict.jsonl  constraint.jsonl  factual.jsonl  multihop.jsonl  state.jsonl
data/examples/: conflict_resolution.jsonl  constraint_following.jsonl  factual_qa.jsonl  state_consistency.jsonl
data/hard/: conflict_resolution.jsonl  constraint_following.jsonl  factual_qa.jsonl  state_consistency.jsonl
docs/paper/: evidence-saturation-k-ssrn.html  evidence-saturation-k-ssrn.md  evidence-saturation-k.md
evidence_k/: __init__.py  cli.py  config.py  scaffold.py
evidence_k/contamination/: __init__.py  markers.py  metrics.py  score.py
evidence_k/models/: __init__.py  base.py  mock.py  openai_compatible.py
evidence_k/outputs/: __init__.py  dual_report.py  profile.py  reports.py
examples/: desi_k_profile_example.json  run_mock_benchmark.sh
scripts/: build_domain_datasets.py  build_dual_battery.py  build_dual_datasets.py  build_hard_datasets.py
tests/: test_adapter.py  test_cli.py  test_config.py  test_dual.py  test_mock_run.py  test_profile_export.py  test_scoring.py
website/: index.html
(+20 files in other folders)
